--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -22,6 +22,10 @@
   }
 }
 
+.myIcon {
+  max-width: 115% !important;
+}
+
 @media only screen and (min-width: 420px) and (min-height: 575px) {
   .RecastApp .RecastAppHeader {
     border-radius: 3px 3px 0 0;
