Adjust to get preference color and set it to css variant. (TEST) Eliminate "@media only screen" statement from 2 style sheets, so that chat window is shown in 100% always.

--- a/src/components/Message/style.scss
+++ b/src/components/Message/style.scss
@@ -1,4 +1,4 @@
-$qrColor: cornflowerblue;
+$generalAccentColor: cornflowerblue;
 
 .RecastAppMessageContainer {
   position: relative;
@@ -173,8 +173,8 @@ $qrColor: cornflowerblue;
       font-weight: bold;
       border-radius: 25px;
 
-      color: $qrColor;
-      border: 1px solid $qrColor;
+      color: var(--qrColor, $generalAccentColor);
+      border: 1px solid var(--qrColor, $generalAccentColor);
     }
   }
 
