--- a/src/components/Live/style.scss
+++ b/src/components/Live/style.scss
@@ -11,8 +11,10 @@
   }
 }
 
+/*
 @media only screen and (min-width: 420px) and (min-height: 575px) {
   .RecastApp .RecastAppLive {
     height: 460px;
   }
 }
+*/
