Change to make it shows the typing icon "..." even if the reply from Node is taking long time.

--- a/src/components/Live/style.scss
+++ b/src/components/Live/style.scss
@@ -11,6 +11,8 @@
   }
 }
 
+// Control chat window size >> Comment out here if you want to show the full size of chat window even in the big screen.
+// Change the style of Chat too, in order to change the outer window.
 /*
 @media only screen and (min-width: 420px) and (min-height: 575px) {
   .RecastApp .RecastAppLive, .CaiApp .CaiAppLive {
@@ -18,3 +20,6 @@
   }
 }
 */
+
+
+
