Increase allowed drop files, Sending a blind message to CAI to make it understand the intent & langauge, Setting no.3 message as ssoUserId etc.

--- a/src/components/Message/style.scss
+++ b/src/components/Message/style.scss
@@ -265,6 +265,7 @@ $generalAccentColor: cornflowerblue;
     transform: translateY(-50%);
     text-align: center;
     color: #428bca;
+    font-size: 80%;
   }
 
 }
